--- a/nd940-c3-advanced-android-programming-project-starter-master/starter/app/src/main/AndroidManifest.xml
+++ b/nd940-c3-advanced-android-programming-project-starter-master/starter/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".MainActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
