--- a/android-testing-starter_code/app/build.gradle
+++ b/android-testing-starter_code/app/build.gradle
@@ -42,6 +42,11 @@ android {
         jvmTarget = "1.8"
     }
 
+    // Always show the result of every unit test when running via command line, even if it passes.
+    /*testOptions.unitTests {
+        includeAndroidResources = true
+    }*/
+
 }
 
 dependencies {
@@ -71,6 +76,13 @@ dependencies {
 
     // Dependencies for local unit tests
     testImplementation "junit:junit:$junitVersion"
+    testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
+
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
+    testImplementation "org.robolectric:robolectric:$robolectricVersion"
+    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
+    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"
 
     // AndroidX Test - Instrumented testing
     androidTestImplementation "androidx.test.ext:junit:$androidXTestExtKotlinRunnerVersion"
