--- a/nd940-android-kotlin-c4-starter-master/starter/app/src/main/AndroidManifest.xml
+++ b/nd940-android-kotlin-c4-starter-master/starter/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".locationreminders.ReminderDescriptionActivity"></activity>
+        <activity android:name=".locationreminders.ReminderDescriptionActivity">
+
+        </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -35,7 +37,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".authentication.AuthenticationActivity">
+        <activity android:name="com.udacity.project4.authentication.AuthenticationActivity">
         </activity>
         <activity android:name=".locationreminders.RemindersActivity" >
             <intent-filter>
