--- a/nd940-android-kotlin-c4-starter-master/starter/app/src/main/AndroidManifest.xml
+++ b/nd940-android-kotlin-c4-starter-master/starter/app/src/main/AndroidManifest.xml
@@ -42,14 +42,18 @@
 
         <activity android:name="com.udacity.project4.authentication.AuthenticationActivity"
             android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".locationreminders.RemindersActivity"
             android:exported="true">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
 
         </activity>
         <receiver
