--- a/recovered/build.gradle
+++ b/recovered/build.gradle
@@ -1,6 +1,5 @@
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     ext.kotlinVersion = '1.3.72'
     ext.navigationVersion = "2.2.0"
@@ -65,10 +64,10 @@ ext {
     hamcrestVersion = '1.3'
     androidXTestRulesVersion = '1.2.0-beta01'
     espressoVersion = '3.2.0'
-
+    //androidXTestRulesVersion = '1.5.0'
+    //espressoVersion = '3.5.0'
 }
-/*
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+/*// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     ext.kotlinVersion = '1.5.21'
@@ -130,12 +129,11 @@ ext {
     robolectricVersion = '4.9'
     androidXTestExtKotlinRunnerVersion = '1.1.4'
     archTestingVersion = '2.1.0'
+    playServicesVersion = '17.0.0'
     playServicesVersionMaps = '18.1.0'
     playServicesVersionLocation = '21.0.1'
     hamcrestVersion = '1.3'
     androidXTestRulesVersion = '1.5.0'
     espressoVersion = '3.5.0'
 
-}
-
-*/
+}*/
